--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,4 @@
 @import url("./plans.css");
 @import url("./sponsors.css");
 @import url("./contact.css");
+@import url("./numbers-animations.css");
