--- a/css/services.css
+++ b/css/services.css
@@ -5,7 +5,7 @@
 .services-text {
     max-width: 600px;
     text-align: center;
-    padding: 80px 0px 80px 0px;
+    padding: 0px 0px 80px 0px;
 }
 
 .services-text h2 {
@@ -34,21 +34,16 @@
 }
 
 .card img {
-    width: auto;
+    width: 350px;
     height: 500px;
-    border-radius: 5px;
+}
+
+.Tipo-de-treino {
+    color: var(--color-background);
 }
 
 .card h5 {
-    display: inline-block;
-    padding: 5px 5px 5px 0px;
     color: var(--color-background);
-    border-radius: 0px 2px 2px 0px;
-}
-
-.card-title {
-    display: flex;
-    width: 320px;
 }
 
 .banner-g {
@@ -56,7 +51,7 @@
     overflow-x: hidden;
 }
 
-.container-banner-g {
+.container-banner-services {
     padding-left: 0px;
     padding-right: 0px;
 }
