--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 @import url("./global.css");
 @import url("./header.css");
 @import url("./banner.css");
+@import url("./numbers-animations.css");
 @import url("./services.css");
 @import url("./plans.css");
-@import url("./sponsors.css");
 @import url("./contact.css");
-@import url("./numbers-animations.css");
+@import url("./footer.css");
