adição de novos arquivos

--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,7 @@
     --color-background-secondary: #E3E3DF;
     --color-main: #000000;
     --color-main-secondary: #232323;
+    --color-main-secondary-1: #3d3d3d;
     --color-details: #EEFB13;
     --color-details-secondary: #989898;
     --color-suport: #D60000;
