--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 .contact {
-    background-color: #232323;
+    background-color: var(--color-main-secondary);
     height: 100%;
     color: white;
 }
@@ -9,7 +9,7 @@
 }
 
 .contact-title h2 {
-    color: white;
+    color: var(--color-background);
     font-size: 54px;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .contact-title p {
-    color: white;
+    color: var(--color-background);
     font-size: 24px;
     width: 500px;
 }
@@ -35,19 +35,19 @@
     left: 0px;
     height: 2px;
     width: 100%;
-    background-color: #3d3d3d;
+    background-color: var(--color-main-secondary-1);
 }
 
 
 .contact-middle p {
     font-size: 12px;
-    color: #989898;
+    color: var(--color-details-secondary);
     
 }
 
 .contact-local p {
     font-size: 12px;
-    color: #989898;
+    color: var(--color-details-secondary);
 }
 
 .contact-local h2 {
@@ -55,7 +55,7 @@
 }
 
 .contact-local h3 {
-    color: #989898;
+    color: var(--color-details-secondary);
     font-size: 20px;
 }
 
