--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import url("./banner.css");
 @import url("./numbers-animations.css");
 @import url("./services.css");
+@import url("./feedback.css");
 @import url("./plans.css");
 @import url("./contact.css");
 @import url("./footer.css");
