Adição de novos arquivos

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url("./numbers-animations.css");
 @import url("./services.css");
 @import url("./feedback.css");
+@import url("./calculadora.css");
 @import url("./plans.css");
 @import url("./contact.css");
 @import url("./footer.css");
