--- a/css/feedback.css
+++ b/css/feedback.css
@@ -48,3 +48,12 @@
     font-size: 30px;
 }
 
+.slider {
+    display: none;
+}
+
+.slider.on {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
