--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -1,16 +1,26 @@
 .calculadora-bg {
-    background-color: var(--color-main-secondary);
+    background-color: var(--color-main);
     color: var(--color-background);
-    padding: 80px 0px 80px 0px;
+    padding: 140px 0px 140px 0px;
 }
 
 .calculadora-container {
-    max-width: 500px;
+    width: 500px;
     gap: 20px;
 }
 
+.calculadora-container h2 {
+   text-align: center;
+}
+
+.calculadora-contaitaner-img i {
+    font-size: 200px;
+    margin-right: 100px;
+    color: var(--color-main-secondary-1);
+}
+
 .divAltura, .divPeso, .divCalc {
-    width: 90%;
+    width: 500px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -30,6 +40,8 @@
     background-color: var(--color-main-secondary-1);
     color: var(--color-background);
     margin-top: 10px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
 
 .calculadora-container button:hover {
@@ -40,12 +52,14 @@
 
 #resultado {
     width: 500px;
+    height: 50px;
     text-align: center;
     font-size: 25px;
     margin-top: 10px;
     font-weight: bolder;
     text-transform: uppercase;
     letter-spacing: 3px;
+    
     
 }
 
