--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,13 +1,13 @@
 .feedback-bg {
-    padding: 120px 0px 120px 0px;
-    background-color: var(--color-main-secondary);
+    padding: 140px 0px 140px 0px;
+    background-color: var(--color-main);
     color: var(--color-background);
 }
 
-.feedback-bg h2 {
-    font-size: 20px;
-    max-width: 600px;
-    margin: 10px 0px 10px 0px;
+.feedback-title h2 {
+    font-size: 40px;
+    margin: 40px 0px 60px 0px;
+    text-transform: uppercase;
 }
 
 .feedback-bg img {
@@ -21,8 +21,9 @@
 }
 
 .texto-depoimento h2 {
-    width: 420px;
+    max-width: 420px;
     margin: 0px 0px 0px 30px;
+    font-size: 20px;
 }
 
 .texto-depoimento i {
@@ -38,6 +39,12 @@
     margin: 0px 0px 0px 30px;
 }
 
+.container-cliente p {
+    color: var(--color-main-secondary-1);
+    font-weight: bolder;
+    font-size: 20px;
+}
+
 .nota-depoimento i {
     color: var(--color-background);
 }
@@ -45,9 +52,16 @@
 .next-banck {
     cursor: pointer;
     padding: 10px;
-    font-size: 30px;
+    font-size: 40px;
+    transition: transform 0.9s ease-in-out;
+
 }
 
+.next-banck:hover {
+    transform: scale(1.20);
+}
+
+ 
 .slider {
     display: none;
 }
@@ -56,4 +70,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} 
+
+
