--- a/css/services.css
+++ b/css/services.css
@@ -35,7 +35,6 @@
 
 .card img {
     max-width: 350px;
-    min-width: 200px;
 }
 
 .Tipo-de-treino {
@@ -58,6 +57,7 @@
 .structures-text h2 {
     color: var(--color-background);
     font-size: 2.5rem;
+    text-transform: uppercase;
 }
 
 .structures-text p {
@@ -74,12 +74,12 @@
 
 .structures-card, 
 .structures-card img {
-    min-width: 200px;
     max-width: 600px;
 }
 
 .structures p {
     color: var(--color-main-secondary-1);
+    text-transform: uppercase;
 }
 
 .structures h5 {
