adição de novos arquivos

--- a/css/services.css
+++ b/css/services.css
@@ -111,7 +111,7 @@
 }
 
 
-/* Adcionar classe na ul através do Js*/
+/* Adciona classe na ul através do Js*/
 .structures-icons-active {
     max-height: 150px;
 }
@@ -148,6 +148,29 @@
 
 .container-banner-services {
     padding: 0px 0px 0px 0px;
+}
+
+.scrollTop {
+    background-color: var(-color-background-secondary);
+    border: none;
+    border-radius: 50%;
+    color: var(--color-main);
+    cursor: pointer;
+    width: 65px;
+    height: 65px;
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+    z-index: 10;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 0.5s ease;
+    font-size: 30px;
+}
+
+.scrollTop.showBtn {
+    opacity: 1;
+    transform: translate(0);
 }
 
 
