--- a/css/plans.css
+++ b/css/plans.css
@@ -3,18 +3,19 @@
 }
 
 .title-plans {
-    max-width: 600px;
+    max-width: 700px;
     text-align: center;
     color: var(--color-background);
     padding: 40px 0px 40px 0px;
 }
 
 .title-plans h2 {
-    font-size: 3rem;
+    font-size: 52px;
 }
 
 .title-plans p {
     color: var(--color-details-secondary);
+    font-size: 24px;
 }
 
 .container-plans-bg {
