--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,5 @@
 @import url("./plans.css");
 @import url("./contact.css");
 @import url("./footer.css");
+@import url("./scrollToTop.css");
+@import url("./blog.css");
