--- a/css/banner.css
+++ b/css/banner.css
@@ -15,22 +15,9 @@
     z-index: 1;
 }
 
-.image img{
-    width: 1300px;
-}
-
-.slider-img {
-    display: none;
-}
-
-.slider-img-on {
-    display: flex;
-}
-
 .text-banner {
-    margin-top: 250px;
-    width: 650px;
-    height: auto;
+    margin-top: 200px;
+    max-width: 650px;
     position: absolute;
     z-index: 9; 
 }
@@ -46,5 +33,17 @@
     margin-bottom: 30px;
     color: var(--color-background);
     font-size: 24px;
+}
+
+.image img{
+    width: 1300px;
+}
+
+.slider-img {
+    display: none;
+}
+
+.slider-img-on {
+    display: flex;
 }
 
