--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,20 @@
 
 .blog-introducao {
     max-width: 650px;
-    margin: 20px 0px 20px 0px;
+    margin: 40px 0px 20px 0px;
+}
+
+.blog-introducao h1 {
+    font-size: 24px;
+    color: var(--color-background);
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.blog-introducao h2 {
+    font-size: 34px;
+    color: var(--color-background);
+    font-weight: bold;
 }
 
 .blog {
@@ -14,6 +27,8 @@
 .blog h2 {
     font-weight: bold;
     color: var(--color-background);
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
 .blog img {
