--- a/css/services.css
+++ b/css/services.css
@@ -105,7 +105,7 @@
 }
 
 
-/* Adciona classe na ul através do Js*/
+/* Adiciona classe na ul através do Js*/
 .structures-icons-active {
     max-height: 150px;
 }
