--- a/css/footer.css
+++ b/css/footer.css
@@ -3,8 +3,15 @@
     padding: 20px;
 }
 
-.copyrught {
+.copyright p, 
+.copyright a {
     color: var(--color-main-secondary-1);
+    
+}
+
+.copyright a:hover {
+    color: var(--color-background);
+    transition: all 0.3s ease;
 }
 
 .footer-redes-sociais {
