--- a/css/contact.css
+++ b/css/contact.css
@@ -64,6 +64,11 @@
     font-weight: bold;
 }
 
+.contact-middle h3 {
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
 .contact-middle button {
     padding: 10px 92px;
 }
