--- a/css/services.css
+++ b/css/services.css
@@ -80,8 +80,9 @@
     text-transform: uppercase;
 }
 
-.structures h5 {
+.structures h3 {
     color: var(--color-background);
+    font-size: 20px;
 }
 
 .structures, .card-body {
