--- a/css/numbers-animations.css
+++ b/css/numbers-animations.css
@@ -8,7 +8,7 @@
 }
 
 .numbers-animation-bg img {
-    width: 60px;
+    max-width: 60px;
     transform: rotate(0deg) scale(1);
     transition: transform 0.8s ease;
 }
