aprimorando responsividade header,banner e services

--- a/css/banner.css
+++ b/css/banner.css
@@ -47,6 +47,38 @@
     display: flex;
 }
 
+@media (max-width: 900px) {
+    .banner {
+        max-height: 100%;
+    }
+    .text-banner {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        position: relative;
+    }
+    .text-banner h1 {
+        font-size: 62px;
+        line-height: 72px;
+    }
+    
+    .text-banner p {
+        margin-bottom: 20px;
+        color: var(--color-background);
+        font-size: 28px;
+    }
+
+    .image img {
+        width: 100%;
+    }
+
+    /* 
+    .image img {
+        max-width: 100%;
+        margin-top: 50px;
+        margin-bottom: 100px;
+     } */
+}
+
 @media (max-width: 550px) {
     .banner {
         max-height: 100%;
@@ -65,10 +97,6 @@
         margin-bottom: 20px;
         color: var(--color-background);
         font-size: 18px;
-    }
-
-    .image img {
-        width: 100%;
     }
 
     /* 
