--- a/css/services.css
+++ b/css/services.css
@@ -156,6 +156,31 @@
     padding: 0px;
 }
 
+@media (max-width: 450px) {
+    .services-text {
+        max-width: 800px;
+        text-align: center;
+        padding: 0px 0px 80px 0px;
+    }
+    
+    .services-text h2 {
+        font-size: 42px;
+    }
+
+    .services-text p {
+        font-size: 18px;
+        padding-left: 30px !important;
+        padding-right: 30px !important;
+    }
+
+    .card img {
+        max-width: 250px;
+    }
+    
+    
+}
+
+
 
 
 
