--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -60,13 +60,41 @@
     font-weight: bolder;
     text-transform: uppercase;
     letter-spacing: 3px;
-    
-    
 }
 
-@media (max-width: 500px) {
+@media (max-width: 450px) {
     .calculadora-container input, 
     .calculadora-container button {
         font-size: 15px;
+    }
+
+    .calculadora-bg {
+        padding: 10px 0px 10px 0px;
+    }
+    
+    .calculadora-container {
+        max-width: 300px;
+        gap: 10px;
+    }
+    
+    .calculadora-container h2 {
+       font-size: 22px;
+    }
+
+    .calculadora-contaitaner-img i {
+        font-size: 100px;
+        margin: 10px;
+    }
+    
+    .divAltura, .divPeso, .divCalc {
+        width: auto;
+        gap: 10px;
+    }
+    
+    #resultado {
+        width: auto;
+        height: 50px;
+        font-size: 15px;
+        margin-top: 10px;
     }
 }
