--- a/css/feedback.css
+++ b/css/feedback.css
@@ -97,6 +97,7 @@
     .feedback-bg img {
         width: 150px;
         height: 150px;
+        object-fit: cover;
         border-radius: 50%;
     }
 
