--- a/css/plans.css
+++ b/css/plans.css
@@ -23,11 +23,12 @@
 }
 
 .card-plans {
+    max-width: 400px; 
+    min-width: 250px;
+    margin: 0px 20px 0px 20px;
     cursor: pointer;
     padding: 50px !important;
     position: relative;
-    max-width: 400px; 
-    min-width: 250px;
 }
 
 .container-plans::before {
@@ -104,7 +105,7 @@
 
 /* responsivo */
 
-@media (max-width: 500px) {
+@media (max-width: 450px) {
     .plans {
         background-image: url(../imgs/banner/banner02.webp);
         background-size: cover;
@@ -112,6 +113,9 @@
         background-position: end;
         height: 100% !important;
         width: 100%;
+        padding-bottom: 100px;
     }
+
+    
 }
 
