--- a/css/services.css
+++ b/css/services.css
@@ -86,7 +86,7 @@
 }
 
 .structures, .card-body {
-    padding: 20px 20px 20px 0px;
+    padding: 20px 20px 20px 20px;
 }
 
 .structures-card {
@@ -156,19 +156,21 @@
 
 @media (max-width: 450px) {
     .services-text {
-        max-width: 800px;
         text-align: center;
-        padding: 0px 0px 80px 0px;
+        padding: 0px 0px 20px 0px;
     }
     
     .services-text h2 {
-        font-size: 42px;
+        font-size: 28px;
     }
 
     .services-text p {
         font-size: 18px;
-        padding-left: 30px !important;
-        padding-right: 30px !important;
+        padding: 0px 30px 0px 30px !important;
+    }
+
+    .container-services {
+        gap: 40px;
     }
 
     .card img {
@@ -177,11 +179,12 @@
     
     .structures-text {
         max-width: 100vw;
+        text-align: center;
         margin: 50px 0px 0px 0px;
     }
     
     .structures-text h2 {
-        font-size: 32px;
+        font-size: 28px;
     }
     
     .structures-text p {
@@ -189,19 +192,12 @@
         line-height: 30px;
     }
 
-    /*///////*/
-
-
-
-
-
-
     .structures-container {
         gap: 20px;
     }
     
     .structures {
-        margin: 100px 0px 100px 0px;
+        margin: 10px 0px 10px 0px;
     }
     
     .structures-card, 
@@ -220,22 +216,14 @@
     }
     
     .structures, .card-body {
-        padding: 20px 20px 20px 0px;
+        padding: 20px 20px 20px 20px;
     }
     
-    .structures-card {
-        transition: transform 0.3s ease-in-out;
-        cursor: pointer;
-    }
-    
-    .structures-card:hover {
-        transform: scale(1.05);
-    }
-    
+
     .structures-icons {
-        width: 38px;
-        max-height: 38px;
-        border-radius: 19px;
+        width: 28px;
+        max-height: 28px;
+        border-radius: 16px;
         background-color: var(--color-background);
         transition: .3s ease-out;
         overflow: hidden;
@@ -248,19 +236,19 @@
     }
 
     .structures-icons li {
-        height: 38px;
-        width: 38px;
+        height: 28px;
+        width:28px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: var(--color-main);
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .structures-icons {
         position: absolute;
-        top: 30px;
-        right: 30px;
+        top: 15px;
+        right: 15px;
     }
 
     .structures-card {
