--- a/css/plans.css
+++ b/css/plans.css
@@ -23,8 +23,7 @@
 }
 
 .card-plans {
-    max-width: 400px; 
-    min-width: 250px;
+    width: 350px; 
     margin: 0px 20px 0px 20px;
     cursor: pointer;
     padding: 50px !important;
@@ -73,7 +72,7 @@
     display: flex;
     justify-content:  left;
     align-items: center;
-    width: 350px;
+    max-width: 350px;
     gap: 5px;
     background-color: transparent;
     border: none !important;
@@ -116,6 +115,24 @@
         padding-bottom: 100px;
     }
 
+    .title-plans  {
+        max-width: 350px;
+        margin: 0 auto;
+    }
+
+    .title-plans h2 {
+        font-size: 28px;
+    }
+
+    .title-plans p {
+        font-size: 20px;
+    }
+
+    .card-plans {
+        max-width: 300px; 
+        margin: 0px 10px 0px 10px;
+        padding: 30px !important;
+    }
     
 }
 
