--- a/css/contact.css
+++ b/css/contact.css
@@ -92,6 +92,9 @@
 }
 
 @media (max-width: 450px) {
+    .contact {
+        padding: 0px 0px 60px 0px;
+    }
     .contact-title {
         padding: 80px 0px 160px 0px;
     }
@@ -111,6 +114,10 @@
         margin: 10px 10px 20px 10px;
         text-align: center;
         line-height: 32px;
+    }
+
+    .contact-info {
+        gap: 50px;
     }
 
     .contact-middle {
@@ -135,10 +142,10 @@
     }
 
     .contact-local-containers {
-        margin-bottom: 30px;
+        margin:  0px 0px 30px 0px;
         text-align: center;
     }
-    
+
     .contact-local-containers p {
         font-size: 18px;
     }
