--- a/css/plans.css
+++ b/css/plans.css
@@ -129,10 +129,18 @@
     }
 
     .card-plans {
-        max-width: 300px; 
+        max-width: 350px; 
         margin: 0px 10px 0px 10px;
         padding: 30px !important;
     }
     
+}
+
+@media (max-width: 350px) {
+    .card-plans {
+        max-width: 300px; 
+        margin: 0px 10px 0px 10px;
+        padding: 30px !important;
+    }
 }
 
