--- a/css/scrollToTop.css
+++ b/css/scrollToTop.css
@@ -20,3 +20,15 @@
     opacity: 1;
     transform: translate(0);
 }
+
+
+@media (max-width: 450px) {
+    .scrollTop {
+        width: 45px;
+        height: 45px;
+        bottom: 15px;
+        right: 20px;
+        z-index: 10;
+        font-size: 20px;
+    }
+}
