--- a/css/blog.css
+++ b/css/blog.css
@@ -54,3 +54,29 @@
     margin-bottom: 50px;
     text-transform: uppercase;
 }
+
+@media (max-width: 450px) {
+    .blog-introducao {
+        max-width: 300px;
+        margin: 20px 0px 20px 0px;
+    }
+
+    .blog-introducao h1 {
+        font-size: 24px;
+        color: var(--color-background);
+        text-align: center;
+        text-transform: uppercase;
+    }
+    
+    .blog-introducao h2 {
+        font-size: 20px;
+        font-weight: lighter;
+        margin: 20px 0px 20px 0px;
+        line-height: 30px;
+    }
+
+    .blog h2 {
+        line-height: 30px;
+    }
+    
+}
