--- a/css/banner.css
+++ b/css/banner.css
@@ -57,8 +57,8 @@
         position: relative;
     }
     .text-banner h1 {
-        font-size: 62px;
-        line-height: 72px;
+        font-size: 52px;
+        line-height: 62px;
     }
     
     .text-banner p {
@@ -70,20 +70,11 @@
     .image img {
         width: 100%;
     }
-
-    /* 
-    .image img {
-        max-width: 100%;
-        margin-top: 50px;
-        margin-bottom: 100px;
-     } */
 }
 
 @media (max-width: 450px) {
-    .banner {
-        max-height: 100%;
-    }
     .text-banner {
+        max-width: 350px;
         margin-top: 50px;
         margin-bottom: 50px;
         position: relative;
@@ -91,20 +82,12 @@
     .text-banner h1 {
         font-size: 32px;
         line-height: 42px;
+        max-width: 350px;
     }
     
     .text-banner p {
         margin-bottom: 20px;
         color: var(--color-background);
         font-size: 18px;
-    }
-
-    /* 
-    .image img {
-        max-width: 100%;
-        margin-top: 50px;
-        margin-bottom: 100px;
-     } */
-     
-    
+    }    
 }
