--- a/css/services.css
+++ b/css/services.css
@@ -35,7 +35,7 @@
 }
 
 .card img {
-    max-width: 350px;
+    max-width: 370px;
 }
 
 .card p {
@@ -154,7 +154,67 @@
     padding: 0px;
 }
 
+@media (max-width: 900px) {
+    .numbers-animation-container {
+        margin: 0px 100px 0px 100px;
+    }
+
+    .services-text h2 {
+        font-size: 52px;
+    }
+    
+    .services-text p {
+        font-size: 22px;
+    }
+
+    .container-services {
+        gap: 60px;
+    }
+
+    
+    .card img {
+        max-width: 800px;
+    }
+    
+    .structures-text {
+        max-width: 100vw;
+        margin: 60px 0px 0px 0px;
+    }
+
+    .structures {
+        margin: 30px 0px 30px 0px;
+    }
+
+    .structures-card {
+        margin: 0px 0px 40px 0px;
+    }
+    
+    .structures-card img {
+        margin: 0px 0px 20px 0px;
+    }
+
+    .structures p {
+        font-size: 25px;
+    }
+    
+    .structures h3 {
+        font-size: 30px;
+    }
+    
+    .structures {
+        padding: 20px 20px 20px 20px;
+    }
+
+    .card-body {
+        padding: 0px !important;
+    }
+    
+}
+
 @media (max-width: 450px) {
+    .numbers-animation-container {
+        margin: 0px 0px 0px 0px;
+    }
     .services-text {
         text-align: center;
         padding: 0px 0px 20px 0px;
@@ -172,6 +232,11 @@
     .container-services {
         gap: 40px;
     }
+
+    .card img {
+        max-width: 350px;
+    }
+    
    
     .structures-text {
         max-width: 100vw;
@@ -197,34 +262,21 @@
     }
     
     .structures-card {
-        max-width: 600px;
         margin: 0px 0px 20px 0px;
     }
     
     .structures-card img {
-        max-width: 600px;
         margin: 0px 0px 10px 0px;
     }
     
-    .structures p {
-        color: var(--color-details-secondary);
-        text-transform: uppercase;
-    }
-    
     .structures h3 {
-        color: var(--color-background);
         font-size: 20px;
     }
     
-    .structures {
-        padding: 20px 20px 20px 20px;
-    }
-
     .card-body {
         padding: 0px !important;
     }
     
-
     .structures-icons {
         width: 28px;
         max-height: 28px;
