--- a/css/feedback.css
+++ b/css/feedback.css
@@ -83,6 +83,80 @@
     align-items: center;
 } 
 
+@media (max-width: 900px) {
+    .feedback-bg {
+        padding: 50px 0px 50px 0px;
+    }
+    .container-cometario {
+        max-width: 210px;
+    }
+
+    .feedback-title h2 {
+        font-size: 28px;
+        margin: 0px 5px 0px 5px;
+        text-align: center;
+       
+    }
+
+    .feedback-bg img {
+        width: 180px;
+        height: 180px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin: 0px 0px 30px 0px;
+    }
+
+    .texto-depoimento h3 {
+        width: 190px;
+        height: 180px;
+        line-height: 30px;
+        margin: 0px 0px 0px 30px;
+        font-size: 20px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical; 
+        overflow-y: auto;
+        text-overflow: ellipsis;
+    }
+    
+    .texto-depoimento i:last-child {
+        margin-left: 100%;
+    }
+
+    .container-cliente {
+        margin: 30px 0px 0px 0px;
+    }
+    
+    .container-cliente p {
+        color: var(--color-details-secondary);
+        font-weight: bolder;
+        font-size: 20px;
+        text-transform: uppercase;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .next-banck {
+        padding: 10px;              
+        font-size: 20px;
+        margin: 5px;
+    }
+
+    .number-coment p {
+        width: 20px;
+        height: 20px;
+        background-color: var(--color-main-secondary);
+        color: white;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        margin-left: 10px;
+    }
+    
+}
+
 @media (max-width: 450px) {
     .feedback-bg {
         padding: 50px 0px 50px 0px;
