--- a/css/services.css
+++ b/css/services.css
@@ -167,14 +167,14 @@
         gap: 60px;
     }
 
-    
     .card img {
         max-width: 800px;
     }
     
     .structures-text {
-        max-width: 100vw;
-        margin: 60px 0px 0px 0px;
+        max-width: 700px;
+        text-align: center;
+        margin: 60px 10px 0px 10px;
     }
 
     .structures {
