--- a/css/plans.css
+++ b/css/plans.css
@@ -24,7 +24,7 @@
 
 .card-plans {
     width: 350px; 
-    margin: 0px 20px 0px 20px;
+    margin: 20px 20px 100px 20px;
     cursor: pointer;
     padding: 50px !important;
     position: relative;
@@ -104,15 +104,37 @@
 
 /* responsivo */
 
+@media (max-width: 1200px) {
+    .plans {
+        margin-bottom: 100px;
+    }
+
+    .title-plans  {
+        max-width: 650px;
+        margin: 0 auto;
+    }
+
+    .title-plans h2 {
+        font-size: 48px;
+    }
+
+    .title-plans p {
+        font-size: 30px;
+    }
+
+    .card-plans {
+        width: 450px; 
+        height: 500px;
+        object-fit: cover;
+        margin: 0px 10px 0px 10px;
+        padding: 30px !important;
+    }
+    
+}
+
 @media (max-width: 450px) {
     .plans {
-        background-image: url(../imgs/banner/banner02.webp);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: end;
-        height: 100% !important;
-        width: 100%;
-        padding-bottom: 100px;
+        margin-bottom: 60px;
     }
 
     .title-plans  {
