--- a/css/footer.css
+++ b/css/footer.css
@@ -64,6 +64,32 @@
     color: var(--color-background);
 }
 
+@media (max-width: 900px) {
+    .footer-redes-sociais i {
+        font-size: 20px;
+    }
+    
+    .footer-redes-sociais ul {
+        gap: 10px;
+        margin: 0px 0px 20px 0px;
+    }
+
+    .footer-termos {
+        gap: 10px;
+    }
+
+    .footer-termos p {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .copyright p, 
+    .copyright a {
+        margin: 10px 0px 10px 0px;
+    }
+}
+
+
 @media (max-width: 450px) {
     .footer-redes-sociais i {
         font-size: 16px;
@@ -80,12 +106,12 @@
 
     .footer-termos p {
         text-align: center;
+        font-size: 16px;
     }
 
     .copyright p, 
     .copyright a {
         margin: 10px 0px 10px 0px;
     }
-
 }
 
