--- a/css/contact.css
+++ b/css/contact.css
@@ -91,7 +91,76 @@
     font-size: 20px;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 900px) {
+    .contact {
+        padding: 0px 0px 60px 0px;
+    }
+    .contact-title {
+        padding: 80px 0px 160px 0px;
+    }
+    
+    .contact-title h2 {
+        font-size: 64px;
+    }
+    
+    .contact-title img {
+        width: 50px;
+        margin-left: 7px;
+    }
+    
+    .contact-title p {
+        font-size: 30px;
+        max-width: 500px;
+        margin: 10px 10px 20px 10px;
+        text-align: center;
+        line-height: 32px;
+    }
+
+    .contact-info {
+        gap: 50px;
+    }
+
+    .contact-middle {
+        gap: 7px;
+    }
+
+    .contact-middle p {
+        font-size: 28px;
+    }
+    
+    .contact-middle h2 {
+        font-weight: bold;
+        font-size: 36px;
+    }
+    
+    .contact-middle h3 {
+        font-size: 28px;
+    }
+    
+    .contact-middle button {
+        padding: 10px 148px;
+    }
+
+    .contact-local-containers {
+        margin:  0px 0px 30px 0px;
+        text-align: center;
+    }
+
+    .contact-local-containers p {
+        font-size: 28px;
+    }
+    
+    .contact-local-containers h2 {
+        font-size: 28px;
+    }
+    
+    .contact-local-containers h3 {
+        font-size: 30px;
+    }
+}
+
+
+@media (max-width: 470px) {
     .contact {
         padding: 0px 0px 60px 0px;
     }
