--- a/css/services.css
+++ b/css/services.css
@@ -86,7 +86,7 @@
 }
 
 .structures, .card-body {
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 0px;
 }
 
 .structures-card {
@@ -155,6 +155,12 @@
 }
 
 @media (max-width: 900px) {
+    .structures-container {
+        overflow-x: scroll;
+        padding-left: 100px;
+        gap: 60px;
+    }
+
     .services-text h2 {
         font-size: 52px;
     }
@@ -167,18 +173,10 @@
         gap: 60px;
     }
 
-    .card img {
-        max-width: 800px;
-    }
-    
     .structures-text {
         max-width: 700px;
         text-align: center;
         margin: 60px 10px 0px 10px;
-    }
-
-    .structures {
-        margin: 30px 0px 30px 0px;
     }
 
     .structures-card {
@@ -187,6 +185,7 @@
     
     .structures-card img {
         margin: 0px 0px 20px 0px;
+        min-width: 400px;
     }
 
     .structures p {
@@ -199,6 +198,7 @@
     
     .structures {
         padding: 20px 20px 20px 20px;
+        margin: 30px 0px 30px 0px;
     }
 
     .card-body {
@@ -208,6 +208,12 @@
 }
 
 @media (max-width: 450px) {
+    .structures-container {
+        overflow-x: scroll;
+        padding-left: 5px;
+        gap: 20px;
+    }
+
     .services-text {
         text-align: center;
         padding: 0px 0px 20px 0px;
@@ -226,11 +232,10 @@
         gap: 40px;
     }
 
-    .card img {
+    /* .card img {
         max-width: 350px;
-    }
+    } */
     
-   
     .structures-text {
         max-width: 100vw;
         text-align: center;
@@ -260,6 +265,7 @@
     
     .structures-card img {
         margin: 0px 0px 10px 0px;
+        min-width: 250px;
     }
     
     .structures h3 {
