--- a/css/services.css
+++ b/css/services.css
@@ -72,7 +72,8 @@
 
 .structures-card, 
 .structures-card img {
-    max-width: 600px;
+    min-width: 250px;
+    max-width: 300px;
 }
 
 .structures p {
@@ -92,6 +93,7 @@
 .structures-card {
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
+    margin: 0px 0px 30px 0px;
 }
 
 .structures-card:hover {
@@ -154,11 +156,25 @@
     padding: 0px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .structures-container {
         overflow-x: scroll;
-        padding-left: 100px;
-        gap: 60px;
+        overflow-y: hidden;
+        padding-left: 200px;
+        gap: 40px;
+    }
+
+    .structures-container::-webkit-scrollbar-button {
+        background: #aaaaaa56;
+    }
+    
+    .structures-container::-webkit-scrollbar-thumb {
+        background: #aaaaaa56; 
+    }
+    
+    .structures-container::-webkit-scrollbar {
+        height: 12px;
+        background-color: transparent; 
     }
 
     .services-text h2 {
@@ -182,10 +198,12 @@
     .structures-card {
         margin: 0px 0px 40px 0px;
     }
-    
+
+    .structures-card, 
     .structures-card img {
         margin: 0px 0px 20px 0px;
-        min-width: 400px;
+        min-width: 350px;
+        max-width: 400px;
     }
 
     .structures p {
@@ -204,14 +222,34 @@
     .card-body {
         padding: 0px !important;
     }
+
+    .structures-card {
+        transition: transform 0.3s ease-in-out;
+        cursor: pointer;
+    }
     
+    .structures-card:hover {
+        transform: scale(1.02);
+    }
+}
+
+@media (max-width: 550px) {
+    .structures-container {
+        padding-left: 60px;
+    }
 }
 
 @media (max-width: 450px) {
     .structures-container {
         overflow-x: scroll;
+        overflow-y: hidden;
         padding-left: 5px;
         gap: 20px;
+    }
+
+    .structures-container::-webkit-scrollbar {
+        height: 8px;
+        background-color: transparent; 
     }
 
     .services-text {
@@ -232,9 +270,9 @@
         gap: 40px;
     }
 
-    /* .card img {
+    .card img {
         max-width: 350px;
-    } */
+    }
     
     .structures-text {
         max-width: 100vw;
@@ -260,13 +298,16 @@
     }
     
     .structures-card {
-        margin: 0px 0px 20px 0px;
+        margin: 0px 0px 20px 0px !important;
     }
     
+    .structures-card, 
     .structures-card img {
         margin: 0px 0px 10px 0px;
-        min-width: 250px;
+        min-width: 210px;
+        max-width: 240px;
     }
+
     
     .structures h3 {
         font-size: 20px;
