--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -4,6 +4,87 @@
     padding: 140px 0px 140px 0px;
 }
 
+/* MODAL */
+.fechar-modal {
+    padding: 10px 20px;
+    background-color: var(--color-main-secondary);
+    color: #fff;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    font-size: 16px;
+}  
+#fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 5;
+}
+
+#modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    max-width: 90%;
+    background-color: #fff;
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+    z-index: 10;
+}
+
+#fade,
+#modal {
+    transition: 0.5s;
+    opacity: 1;
+    pointer-events: all;
+}
+
+.modal-body table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0px;
+}
+.modal-body th, td {
+    border: 1px solid black;
+    text-align: left;
+    padding: 8px;
+    color: black;
+}
+
+.modal-body th {
+    background-color: var(--color-details-secondary);
+}
+
+.modal-header {
+    border-bottom: 1px solid #ccc;
+}
+
+.modal-header h2 {
+    color: black;
+    font-weight: bolder;
+}
+
+.modal-link a {
+    font-family: sans-serif;
+}
+
+#modal.hide,
+#fade.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+#modal.hide {
+    top: 0;
+}
+
+
+
 .calculadora-contaitaner-img i {
     font-size: 200px;
     margin-right: 100px;
@@ -22,6 +103,7 @@
 .calculadora-container i {
     font-size: 25px;
     margin: 0px 10px 10px 10px;
+    cursor: pointer;
 }
 
 .divAltura, .divPeso, .divCalc {
