--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -190,9 +190,9 @@
 
     .calculadora-contaitaner-img i {
         font-size: 100px;
-        margin: 10px;
+        margin: 0px 10px 50px 10px;
     }
-    
+
     .divAltura, .divPeso, .divCalc {
         width: 250px;
         gap: 10px;
