--- a/css/feedback.css
+++ b/css/feedback.css
@@ -159,11 +159,12 @@
 
 @media (max-width: 450px) {
     .feedback-bg {
-        padding: 50px 0px 50px 0px;
+        padding: 50px 0px 20px 0px;
     }
 
     .feedback-title h2 {
-        font-size: 28px;
+        font-size: 22px;
+        max-width: 250px;
     }
 
     .feedback-bg img {
