mudança no layout do banner

--- a/css/banner.css
+++ b/css/banner.css
@@ -23,16 +23,27 @@
 }
 
 .text-banner h1 {
-    font-size: 62px;
-    line-height: 72px;
+    font-size: 72px;
+    line-height: 82px;
     text-transform: uppercase;
-    color: var(--color-background);
+    color: var(--color-background); 
+}
+
+.text-banner h1 span {
+    color: var(--color-details);
+    font-size: 60px;
 }
 
 .text-banner p {
     margin-bottom: 30px;
     color: var(--color-background);
     font-size: 24px;
+}
+
+.text-banner button {
+    background-color: var(--color-details);
+    font-size: 18px;
+    border-radius: 2px;
 }
 
 .image img{
@@ -80,9 +91,11 @@
         position: relative;
     }
     .text-banner h1 {
-        font-size: 32px;
+        font-size: 35px;
         line-height: 42px;
+        letter-spacing: 4px;
         max-width: 350px;
+        
     }
     
     .text-banner p {
@@ -90,4 +103,12 @@
         color: var(--color-background);
         font-size: 18px;
     }    
+
+    .text-banner button {
+        font-size: 16px;
+    }
+
+    .text-banner i {
+        font-size: 20px;
+    }
 }
